--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 	<version>1.0.0</version>
 	<dependencies>
 		<dependency>
-			<groupId>com.sun.mail</groupId>
-			<artifactId>javax.mail</artifactId>
-			<version>LATEST</version>
+			<groupId>priv.xiaohu.mail</groupId>
+			<artifactId>simple-mail</artifactId>
+			<version>RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
